--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -35,7 +35,10 @@
 
     </footer>
   </div>
-  <script src="../../public/js/script.js"></script>
+  {{!-- Script specifically if user is logged in --}}
+  {{#if logged_in}}
+  <script src="../../public/js/logout.js"></script>
+  {{/if}}
 </body>
 
 </html>
