--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,8 +18,11 @@ header, .project:not(:last-child) {
   text-decoration: underline;
 }
 
-.dollar-amount {
-  color: #056605;
-  font-weight: bold;
-  margin-left: -5px;
+.landing-container {
+  border: solid black 5px;
+}
+
+.inner-landing-div {
+  text-align: center;
+  padding: 20% 2% 20% 2%;
 }
