--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,5 +1,5 @@
-<div class="landing-container">
-  <div class="inner-landing-div">
+<div class="main-div">
+  <div class="inner-main-div">
     <h1>Welcome to the Tech Blog!</h1>
   </div>
 </div>
