Began work on the dashboard template.

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,6 +1,6 @@
 {{!-- {{#each posts as |post|}} --}}
-<div class="container px-2">
-  <div>
-
+<div class="dashboard-main container-fluid px-2">
+  <div class="dashboard-sub container px-2">
+    <h2 class="dashboard-header">WHAT</h2>
   </div>
 </div>
