--- a/public/css/style.css
+++ b/public/css/style.css
@@ -50,3 +50,16 @@ header, .project:not(:last-child) {
   padding: 1% 8% 1% 8%;
   border-left: solid 1px black;
 }
+
+.dashboard-main {
+
+}
+
+.dashboard-sub {
+  border: 4px solid black;
+  padding: 0.625rem;
+}
+
+.dashboard-header {
+  text-align: center;
+}
