--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,6 +1,11 @@
-{{!-- {{#each posts as |post|}} --}}
 <div class="dashboard-main container-fluid px-2">
+  {{#each posts as |post|}}
   <div class="dashboard-sub container px-2">
-    <h2 class="dashboard-header">WHAT</h2>
+    <div class="post-header"><h2 class="dashboard-header">{{postTitle}}</h2></div>
+    <hr>
+    <div class="post-body">{{postBody}}</div>
+    <hr>
+    <div class="post-footer">Posted by {{user.userName}} on {{format_date date_created}}</div>
   </div>
+  {{/each}}
 </div>
