--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,7 +3,7 @@
     <h1>Please log in or sign up below.</h1>
   </div>
   <div class="row-holder">
-    <form>
+    <form class="form login-form">
       <div class="login-area">
         <span><h3>Login:</h3></span>
         <div class="form-group">
@@ -12,11 +12,14 @@
         </div>
         <div class="form-group">
           <label for="password-login">Password:</label>
-          <input class="form-input" type="text" id="password-login" />
+          <input class="form-input" type="password" id="password-login" />
+        </div>
+        <div class="form-group">
+          <button class="form-btn custom-btn btn btn-primary" type="submit">Login</button>
         </div>
       </div>
     </form>
-    <form>
+    <form class="form signup-form">
       <div class="signup-area">
         <span><h3>Sign Up:</h3></span>
         <div class="form-group">
@@ -27,11 +30,16 @@
           <label for="email-signup">Email:</label>
           <input class="form-input" type="text" id="email-signup"/>
         </div>
-        <div>
+        <div class="form-group">
           <label for="password-signup">Password:</label>
-          <input class="form-input" type="text" id="password-signup"/>
+          <input class="form-input" type="password" id="password-signup"/>
+        </div>
+        <div class="form-group">
+          <button class="form-btn custom-btn btn btn-primary" type="submit">Login</button>
         </div>
       </div>
     </form>
   </div>
 </div>
+
+<script src="/js/login.js"></script>
