--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,11 +1,11 @@
 <div class="dashboard-main container-fluid px-2">
   {{#each posts as |post|}}
   <div class="dashboard-sub container px-2">
-    <div class="post-header"><h2 class="dashboard-header">{{postTitle}}</h2></div>
+    <div class="post-header"><a class="post-link" href="/post/{{id}}"><h2 class="dashboard-header">{{postTitle}}</h2></a></div>
     <hr>
     <div class="post-body">{{postBody}}</div>
     <hr>
-    <div class="post-footer">Posted by {{user.userName}} on {{format_date date_created}}</div>
+    <div class="post-footer">Posted on {{format_date date_created}}</div>
   </div>
   {{/each}}
 </div>
