--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -15,7 +15,7 @@
           <input class="form-input" type="password" id="password-login" />
         </div>
         <div class="form-group">
-          <button class="form-btn custom-btn btn btn-primary" type="submit">Login</button>
+          <button class="form-btn login-btn custom-btn btn btn-primary" type="submit">Login</button>
         </div>
       </div>
     </form>
@@ -35,7 +35,7 @@
           <input class="form-input" type="password" id="password-signup"/>
         </div>
         <div class="form-group">
-          <button class="form-btn custom-btn btn btn-primary" type="submit">Login</button>
+          <button class="form-btn login-btn custom-btn btn btn-primary" type="submit">Sign Up</button>
         </div>
       </div>
     </form>
