--- a/public/css/style.css
+++ b/public/css/style.css
@@ -122,3 +122,19 @@ input[type="text"] {
   margin-top: 1%;
   text-align: center;
 }
+
+.divider {
+  border: black 1px solid;
+  margin: 0;
+}
+
+.comment-area {
+  width: 100%;
+  margin: 2% 0 0% 0;
+  padding: 2%;
+}
+
+.comment-btn {
+  margin-top: 0.5%;
+  width: 100%;
+}
