--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -5,8 +5,20 @@
     <div class="post-body" contenteditable="false">{{postBody}}</div>
     <hr>
     <div class="post-footer">Posted by {{user.userName}} on {{format_date date_created}}</div>
+    {{#if comments.length}}
     <div class="comments">
       <h5 class="comments-header">Comments:</h5>
+      {{#each comments as |comment|}}
+      <p class="one-comment"><h6>{{user.userName}}: </h6><span>{{comment.commentBody}}</span></p>
+      <hr class="divider">
+      {{/each}}
     </div>
+    {{/if}}
+    <form>
+      <div class="create-comment">
+        <textarea class="comment-area"></textarea>
+      </div>
+      <button type="submit" class="comment-btn custom-btn btn btn-primary">Submit New Comment</button>
+    </form>
   </div>
 </div>
