--- a/public/css/style.css
+++ b/public/css/style.css
@@ -133,3 +133,43 @@ input[type="text"] {
   margin-top: 0.5%;
   width: 100%;
 }
+
+.dash-note {
+  margin: 0;
+  font-style: italic;
+  opacity: 50%;
+  font-size: 16px;
+}
+
+.comment-group {
+  display: flex;
+  flex-direction: column;
+  margin: 0.5% 0% 1% 1%;
+  position: relative;
+}
+
+.comment-group {
+  border: 2px lime solid;
+}
+
+.dlt-com-btn {
+  min-width: 10%;
+  position: absolute;
+  right: 3%;
+  top: 20%;
+  overflow-x: visible;
+}
+
+@media (max-width: 768px) {
+  main {
+    margin: 0
+  }
+
+  .dlt-com-btn {
+    min-width: 100%;
+    right: 0;
+    top: 0;
+    position: relative;
+    overflow-x: visible;
+  }
+}
