Made new-post route.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,4 @@
-/* Copied over from the 28-Stu Mini-Project, just to save some time. */
+/* Much of this is copied over from the 28-Stu Mini-Project, just to save some time. */
 header, .project:not(:last-child) {
   border-bottom: 1px solid #ccc;
 }
