--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -14,7 +14,7 @@
   {{/each}}
   {{/if}}
   <div class="container button-container">
-    <button class="new-post-btn custom-btn btn btn-primary">New Post</button>
+    <a class="new-post-btn custom-btn btn btn-primary" href="/dashboard/new-post">New Post</a>
   </div>
   {{#if comments.length}}
   <div class="dashboard-sub container px-2">
