Added functionality for adding posts.

--- a/views/new-post.handlebars
+++ b/views/new-post.handlebars
@@ -1,3 +1,14 @@
-<div>
-  TEST
+<div class="dashboard-main container-fluid px-2">
+  <div class="dashboard-sub container px-2">
+    <h1 class="dash-welcome">New Post</h1>
+  </div>
+  <div class="dashboard-sub container px-2">
+    <form class="form new-post-form">
+      <textarea class="new-post-title" label="new-post-title" rows="1" placeholder="Post title here"></textarea> 
+      <textarea class="new-post-body" label="new-post-body" rows="6" placeholder="Post body here"></textarea>
+      <button class="post-btn custom-btn btn btn-primary" type="submit">Submit</button>
+    </form>
+  </div>
 </div>
+
+<script src="/js/newPost.js"></script>
