--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,10 @@ header, .project:not(:last-child) {
   border-bottom: 1px solid #ccc;
 }
 
+textarea {
+  resize: none;
+}
+
 .no-button {
   background: none;
   border: none;
@@ -63,6 +67,7 @@ header, .project:not(:last-child) {
 .dashboard-sub-1 {
   border: 4px solid black;
   padding: 0.625rem;
+  margin-bottom: 1%;
 }
 
 .dashboard-header {
@@ -185,6 +190,22 @@ input[type="text"] {
   right: 115px;
   top: 30%;
   overflow-x: visible;
+}
+
+.new-post-title {
+  width: 100%;
+  padding: 1%;
+  margin-bottom: 0.5%;
+}
+
+.new-post-body {
+  width: 100%;
+  padding: 1%;
+  margin-bottom: 0.5%;
+}
+
+.post-btn {
+  width: 100%;
 }
 
 @media (max-width: 768px) {
